--- a/conda.yaml
+++ b/conda.yaml
@@ -10,6 +10,12 @@ dependencies:
   - pip=23.2.1                    
   - robocorp-truststore=0.8.0     
   - pip:
-    - rpaframework
-    - robocorp-workitems             
-    - colorlog     
+    - openpyxl==3.1.5
+    - python-dotenv==1.0.1
+    - robocorp-tasks==3.1.1
+    - robocorp-storage==1.0.4
+    - robotframework-browser==18.6.3
+    - robotframework-seleniumlibrary
+    - robocorp-workitems==1.4.5             
+    - colorlog==6.8.2
+    - git+https://github.com/robotframework/SeleniumLibrary.git
