--- a/robot.yaml
+++ b/robot.yaml
@@ -1,13 +1,11 @@
 
 tasks:
   Run Task:
-    shell: python -m robocorp.tasks run tasks_producer.py -t produce_workitems
-    shell: python -m robocorp.tasks run tasks.py -t scraper_and_output_file
+    shell: python -m robocorp.tasks run tasks_producer.py produce_workitems
+    shell: python -m robocorp.tasks run tasks.py scraper
 
 environmentConfigs:
   - environment_windows_amd64_freeze.yaml
-  - environment_linux_amd64_freeze.yaml
-  - environment_darwin_amd64_freeze.yaml
   - conda.yaml
 
 artifactsDir: output/downloads
