fix: adjusts to have two tasks

--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,7 @@ temp/
 .DS_Store
 *.pyc
 *.zip
-*/work-items-out/*
-devdata/downloads
-*/excel/*
+devdata/work-items-out/
 testrun/*
 .~lock*
 *.pkl
-.git
-.venv
-Log/log_app.log
-tasks_local_test.py
