--- a/conda.yaml
+++ b/conda.yaml
@@ -6,16 +6,15 @@ channels:
   - conda-forge
 
 dependencies:
-  - python=3.11.5                
-  - pip=23.2.1                    
-  - robocorp-truststore=0.8.0     
+  - python=3.10.12                # https://pyreadiness.org/3.10
+  - pip=23.2.1                    # https://pip.pypa.io/en/stable/news
+  - robocorp-truststore=0.8.0     # https://pypi.org/project/robocorp-truststore/
   - pip:
+    - colorlog==6.8.2
+    - rpaframework==28.0.0        # https://rpaframework.org/releasenotes.html
+    - robocorp==1.4.0             # https://pypi.org/project/robocorp
+    - robocorp-browser==2.2.1     
     - openpyxl==3.1.5
     - python-dotenv==1.0.1
-    - robocorp-tasks==3.1.1
-    - robocorp-storage==1.0.4
-    - robotframework-browser==18.6.3
-    - robotframework-seleniumlibrary
     - robocorp-workitems==1.4.5             
-    - colorlog==6.8.2
-    - git+https://github.com/robotframework/SeleniumLibrary.git
+
