--- a/robot.yaml
+++ b/robot.yaml
@@ -1,16 +1,19 @@
+# For more details on the format and content:
+# https://github.com/robocorp/rcc/blob/master/docs/recipes.md#what-is-in-robotyaml
 
 tasks:
-    TaskOne:  Producer
-      command:
-        python -m robocorp.tasks run tasks_producer.py # Comando para executar a primeira task
-    TaskTwo:  Scrapper
-      command:
-        python -m robocorp.tasks run tasks.py  # Comando para executar a segunda task
+  Producer:
+    shell: python -m robocorp.tasks run tasks.py -t producer
+  Consumer:
+    shell: python -m robocorp.tasks run tasks.py -t scrapper
+
 environmentConfigs:
   - environment_windows_amd64_freeze.yaml
+  - environment_linux_amd64_freeze.yaml
+  - environment_darwin_amd64_freeze.yaml
   - conda.yaml
 
-artifactsDir: output/downloads
+artifactsDir: output
 
 PATH:
   - .
